git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@19805 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/mobicents-skin/src/main/resources/META-INF/maven/site.vm
+++ b/mobicents-skin/src/main/resources/META-INF/maven/site.vm
@@ -378,7 +378,7 @@ Search
 
 			<a
 				href="community.html"
-				accesskey="c">Community</a>
+				accesskey="c">Community</a></li><li><a href="http://www.mobicents.org/calendar.html" accesskey="i">Calendar</a>
 		</li>
 		<li>
 			<a
